fix event overlapping on mobile (#180)

--- a/website/events/static/events/scss/_events.scss
+++ b/website/events/static/events/scss/_events.scss
@@ -34,7 +34,9 @@
 }
 
 .card-col {
-  min-width: 0;
+  @include media-breakpoint-up(md) {
+    min-width: 0;
+  }
 }
 
 .event-description {
